# crspectra

./: .gitattributes  .mypy.ini  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  example.yml  prepublish.yml  publish.yml  test.yml
crspectra/: __init__.py  _crspectra.py  connect.py  crspectra.db  crspectra.py  data.py  external.py
crspectra/data/: crspectra.db
example/: crspectra.ipynb
tests/: conftest.py  test_crspectra.py  test_external.py
