[tool.poetry]
name = "crspectra"
version = "0.1.0"
description = "Database of published cosmic-ray energy spectra"
authors = ["Kai Krings <kai.krings@posteo.de>"]
license = "GPL-3.0-only"
readme = "README.rst"
repository = "https://github.com/kkrings/crspectra"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"
mypy = "^0.991"
pre-commit = "^2.20.0"


[tool.poetry.group.stubs.dependencies]
types-setuptools = "^65.6.0.2"
types-requests = "^2.28.11.6"


[tool.poetry.group.notebook.dependencies]
matplotlib = "^3.6.2"
ipykernel = "^6.19.4"
ipympl = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
