[tool.poetry]
name = "crspectra"
version = "1.1.0"
description = "Database of published cosmic-ray energy spectra"
authors = ["Kai Krings <kai.krings@posteo.de>"]
license = "GPL-3.0-only"
readme = "README.rst"
repository = "https://github.com/kkrings/crspectra"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
coverage = "^7.0.5"

[tool.poetry.group.mypy.dependencies]
types-requests = "^2.28.11.6"

[tool.poetry.group.pytest.dependencies]
pytest-mock = "^3.10.0"

[tool.poetry.group.notebook.dependencies]
matplotlib = "^3.6.2"
ipykernel = "^6.19.4"
ipympl = "^0.9.2"
nbconvert = "^7.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
